# crypto-kline-vision-data

./: .cursorignore  .cursorrules  .gitignore  .lychee.toml  .mise.toml  .pretterrc.toml  .pylintrc  AGENTS.md  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRITICAL_BUG_FIX_REPORT.md  DSM_LOGGING_IMPROVEMENTS_SUMMARY.md  DSM_LOGGING_SOLUTION_SUMMARY.md  LICENSE  LOGURU_MIGRATION_TEST_RESULTS.md  PRD.md  README.md  README_cache_key_management.md  RENAME_FINAL_STEPS.md  SOLUTION_SUMMARY.md  USER_ISSUE_RESOLUTION_REPORT.md  __init__.py  compact  conftest.py  dsm_fix_demonstration.py  mise.toml  pyproject.toml  pyrightconfig.json  pytest.ini  rate_limit_tester.py  requirements.txt  ruff.toml  run_test.sh  setup.py  test_dsm_auto_reindex_fix.py  test_time_alignment_bug.py  test_unused_imports3.py  update_logger_usage.py
.claude/: README.md  settings.json  settings.md
.devcontainer/: Dockerfile  devcontainer.json  make-scripts-executable.sh  setup-git-ssh.sh  setup-github-cli.sh  verify-path.sh
core/: __init__.py  binance_funding_rate_client.py  cache_manager.py  data_client_factory.py  data_client_interface.py  data_source_manager.md  data_source_manager.py  market_data_client.py  rest_data_client.py  vision_constraints.py  vision_data_client.py  vision_data_client_enhanced.py
crates/ckvd-reconciler/: Cargo.toml
crates/ckvd-reconciler/src/: dedup.rs  gap_detector.rs  lib.rs  types.rs
crates/ckvd-reconciler/tests/: ws_chaos_tests.rs
docs/: CLAUDE.md  GLOSSARY.md  INDEX.md  RESUME.md  TROUBLESHOOTING.md  caching_migration_guide.md  documentation_audit.md  http_client_benchmark_summary.md  httpx_migration_guide.md  python_package_principles.mdc  python_package_principles_checklist.md  python_package_principles_examples.py  python_package_principles_guide.md  roadmap_upgrade_logger_pytest_caplog.md  roadmap_upgrade_market_data_client.md  roadmap_upgrade_market_data_client_lhf.md
examples/: CLAUDE.md  README.md  cache_key_management_demo.py  checksum_verification_test.py  ckvd_lazy_initialization_demo.py  ckvd_logging_demo.py  clean_feature_engineering_example.py  data_retrieval_best_practices.py  default_logging_comparison.py  dsm_lazy_initialization_demo.py  dsm_logging_demo.py  funding_rate_automated_download_example.py  funding_rate_direct_download_example.py  loguru_demo.py  migration_guide.py  quick_start.py  recommended_data_retrieval.py  simple_data_retrieval.py  task_cancellation_demo.py  task_cancellation_demo_trim.py  task_management_demo.py  test_checksum.py  verify_data_retrieval.py
playground/: CLAUDE.md  benchmark_best_practice.py  compare_download_tools.sh  multi_run_benchmark.sh  python_curl_cffi_benchmark.py  python_daft_benchmark.py  python_requests_benchmark.py  shell_benchmark.sh  shell_benchmark_simple.sh  vision_benchmark.py
scripts/: CLAUDE.md  README.md  __init__.py  claude-code-migrate.sh  run_tests.sh  (+9 more)
(+772 files in other folders)
